# suigui

./: .gitignore  README.md  package.json  presentation.md  tsconfig.json  types.d.ts
components/Home/: index.tsx
components/Layout/: Header.tsx  index.tsx
components/LoginCard/: index.tsx
components/Modals/: connect.tsx
pages/: index.tsx
pages/components/Layout/: index.tsx
pages/wallet/: index.tsx
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: ipc.rs  main.rs
src-tauri/src/store/: mod.rs
src-tauri/src/sui/: key.rs
src-tauri/src/sui_client/: coin.rs  config.rs  mod.rs  object.rs
src/bindings/: CreateConfigResult.ts  CreateKeyResult.ts  IpcResponse.ts  SuiCoinResult.ts  SuiObjectResult.ts  SuiTxResult.ts  index.ts
src/components/Dashboard/: Assets.tsx  Objects.tsx  SelectButton.tsx  Tabs.tsx
src/components/Dashboard/Assets/: Object.tsx  Objects.tsx  SelectButton.tsx  index.tsx
src/components/Dashboard/Tabs/: Contact.tsx  index.tsx
src/components/Home/: index.tsx
src/components/Layout/: Header.tsx  Sidebar.tsx  index.tsx
src/components/LoginCard/: index.tsx
src/components/Modals/: connect.tsx
src/contexts/: ObjectContext.tsx
src/hooks/: useActiveAddress.ts  useCreateKey.ts  useDnd.ts  useDragAndDrop.ts  useSui.ts
src/hooks/DragAndDrop/: useMergeDnD.ts  useSendDnD.ts  useSimpleDnD.ts
src/hooks/sui/: .useGetObjects 2.ts.icloud  useActiveAddress.ts  useCreateKey.ts  useGetCacheCoinsByType.ts  useGetCoinTypes.ts  useGetCoins.ts  useGetCoinsByType.ts  useGetObjects.ts  useGetOnchainCoinsByType.ts  useMergeCoins.ts  useSelectedCoin.ts  useSelectedCoinType.ts  useSelectedObjectType.ts
src/pages/: _app.tsx
src/pages/assets/: index.tsx
src/pages/assets/[coinType]/: index.tsx
src/pages/assets/components/: Objects.tsx  Sidebar.tsx
src/pages/dashboard/: index.tsx
src/pages/dashboard/[coinType]/: index.tsx
src/pages/dashboard/components/: Assets.tsx  Objects.tsx  SelectButton.tsx  Tabs.tsx
src/pages/ecosystem/: [projectName].tsx  index.tsx
src/pages/ecosystem/[project]/: index.tsx
src/pages/ecosystem/components/: Sidebar.tsx
src/store/: gasCoinStore.ts  objectStore.ts  selectedCoinTypeStore.ts  store.ts
src/styles/: globals.css
src/utils/: createNewKey.ts  getActiveAddress.ts  getCacheCoinsByType.ts  getCoinsByType.ts  getObjectsByType.ts  getOnchainCoinTypes.ts  getOnchainCoinsByType.ts  getRemoteCoinTypes.ts  getRemoteCoins.ts  getRemoteObjectTypes.ts  getRemoteObjects.ts  mergeCoins.ts  transferCoin.ts  transferObject.ts
