[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.67"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with_macros = "2"
tauri = { version = "1", features = [] }
parking_lot = "0.12"
ts-rs = { version = "6" }
sui-sdk = { git = "https://github.com/MystenLabs/sui", branch = "devnet"}
sui = { git = "https://github.com/MystenLabs/sui", branch = "devnet"}
sui-keys = { git = "https://github.com/MystenLabs/sui", branch = "devnet"}
# sui-json-rpc = { git = "https://github.com/MystenLabs/sui", branch = "devnet"}
dirs = "4"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
